crates/ktsense-cli/tests/snapshots/trace__an_ambiguous_name_lists_every_candidate_and_exits_three_without_a_session.snap
---
source: crates/ktsense-cli/tests/trace.rs
expression: record(&run)
---
exit 3
stderr empty
---
## Symbols: save

```text
shop.db.InMemoryOrderRepository.save  fun  db/src/main/kotlin/shop/db/InMemoryOrderRepository.kt:13  override fun save(order: Order): OrderId
shop.db.JdbcOrderRepository.save  fun  db/src/main/kotlin/shop/db/JdbcOrderRepository.kt:8  override fun save(order: Order): OrderId
shop.order.OrderRepository.save  fun  core/src/main/kotlin/shop/order/OrderRepository.kt:4  fun save(order: Order): OrderId
```
